# orion-holochain

./: .gitignore  README.md  app.json  package-lock.json  run-test.sh  techstack.md  techstack.yml
notes/: 4.txt  5.txt
test/: index.js  package-lock.json  package.json
zomes/orion_project1/code/: Cargo.toml
zomes/orion_project1/code/src/: lib.rs
zomes/orion_project1/code/src/broker/: mod.rs
zomes/orion_project1/code/src/order/: mod.rs
