[package]
name = "orion_project1"
version = "0.1.0"
authors = ["alex maslakov <alex@serendipia.email>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.16-alpha1" }
holochain_core_types = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.16-alpha1" }
holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.16-alpha1" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.16-alpha1" }
boolinator = "2.4.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
